tests/unit-fail-compilation/needsInclude.c.ref
needsInclude.c:2:10: fatal error: include.h: No such file or directory
 #include "include.h"
          ^~~~~~~~~~~
compilation terminated.
Translation failed (kcc_config dumped). To repeat, run this command in directory unit-fail-compilation:
